[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang`
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
