[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hermes"

# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang`
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
derive_setters = "0.1.6"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
